# MTC-Flow

./: .gitignore  2-4.數據集分割_分層抽樣.py  README.md  check_env.py  eval_stability.py  gradio_app.py  mtc_core.py  optuna_tune.py  pyproject.toml  train_mtc.py  快捷啟動指令備份.md  簡易操作指令.md  超詳細專案教學.md
configs/: default.yaml  logging.yaml
docs/: quickstart.md
src/: main.py
src/data/: io.py  split.py
src/mtc/: dataset.py  inference.py  labels.py  modeling.py  training.py
src/pipeline/: stages.py
src/utils/: config.py  logging.py
src/visualization/: metrics.py
